# tankpipe-app

./: .gitignore  AGENTS.md  LICENSE.txt  README.md  babel.config.js  jest.config.js  money.code-workspace  package-lock.json  package.json  rollup.config.js  svelte.config.js  vitest.config.js
.github/workflows/: node.js.yml
e2e-tests/: package-lock.json  package.json  wdio.conf.js
public/: global.css  index.html
src/: About.svelte  Accounts.svelte  App.svelte  Dialog.svelte  EditAccount.svelte  EditBooks.svelte  EditCompound.svelte  EditModifier.svelte  EditMultipleTransactions.svelte  EditSchedule.svelte  EditTransaction.svelte  Importer.svelte  InterestPanel.svelte  Journal.svelte  Modifier.svelte  Modifiers.svelte  NetAssets.svelte  Schedule.svelte  SchedulePanel.svelte  Schedules.svelte  Select.svelte  Settings.svelte  Spinner.svelte  Transaction.svelte  TransactionList.svelte  Transactions.svelte  accounts.js  config.js  context.js  dates.js  errors.js  events.js  generate.js  i18n.js  main.js  page.js  selector.js  settings.js
src-tauri/: Cargo.toml  books.json  tauri.conf.json  test.csv  test_dr_cr.csv
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.yml
src-tauri/src/: about.rs  account_display.rs  books.json  config.rs  csv_check.rs  handlers.rs  i18n.rs  main.rs  menu.rs  money_repo.rs  reader.rs
src-tauri/src/handlers/: account.rs  interest.rs  mod.rs  modifier.rs  repo.rs  schedule.rs  transaction.rs
src-tauri/test/fixtures/: bank_transactions.csv  bank_transactions_ddmmyyyy.csv  bank_transactions_manual.csv  bank_transactions_manual_ddmmyyyy.csv
src/.github/: dependabot.yml
src/accounts/: Accounts.svelte  EditAccount.svelte  InterestPanel.svelte
src/components/: Dialog.svelte  ErrorMsg.svelte  MessagePanel.svelte  Select.svelte
src/locales/: en.json
src/schedules/: EditModifier.svelte  EditSchedule.svelte  Modifier.svelte  Modifiers.svelte  Schedule.svelte  SchedulePanel.svelte  Schedules.svelte  generate.js
src/stores/: accounts.js  config.js  page.js
src/transactions/: EditMultipleTransactions.svelte  EditTransaction.svelte  Importer.svelte  Transaction.svelte  TransactionList.svelte  Transactions.svelte  chart-options.js  reconciliation.js
src/utils/: dates.js  disabledItems.js  errors.js  i18n.js
tests/: Accounts.test.js  EditAccount.test.js  EditBooks.test.js  EditMultipleTransactions.test.js  EditSchedule.test.js  EditTransaction.test.js  InterestPanel.test.js  Schedules.test.js  Select.test.js  TransactionList.test.js  Transactions.test.js  account_data.json  errors.test.js  page.test.js  selector.test.js  setup.js  transaction_data.json
(+18 files in other folders)
