[package]
name = "app"
version = "0.1.1-alpha"
description = "Cashflow Manager"
authors = ["tankpipe.com"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.87"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "devtools"] }
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
chrono = "0.4.34"
csv = "1.3"
uuid = { version = "1.7", features = ["serde", "v4"] }
directories = "5.0.1"
accounts = { path = "../../accounts"}
regex = "1.10"
data-encoding = "2.5.0"
dirs = "5.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"


[dev-dependencies]
serial_test = "3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
