[package]
name = "app"
version = "0.1.2-alpha"
description = "Tankpipe cashflow manager"
authors = ["tankpipe.com"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.94"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "devtools"] }
rust_decimal = "1.41"
rust_decimal_macros = "1.40"
chrono = "0.4.44"
csv = "1.4"
uuid = { version = "1.23", features = ["serde", "v4"] }
directories = "6.0.0"
accounts = { path = "../../accounts"}
regex = "1.12"
data-encoding = "2.10.0"
dirs = "6.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
rust-i18n = "3.1"


[dev-dependencies]
serial_test = "3.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
